--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -5,6 +5,11 @@ on: [pull_request]
 jobs:
   format-check:
     runs-on: ubuntu-latest
+    
+    defaults:
+          run:
+            working-directory: backend
+    
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
