--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -8,7 +8,7 @@ jobs:
     
     defaults:
           run:
-            working-directory: backend
+            working-directory: back-end
     
     steps:
       - uses: actions/checkout@v3
