feat: add JWT configuration properties for secret and expiration

--- a/back-end/src/test/resources/application.properties
+++ b/back-end/src/test/resources/application.properties
@@ -11,3 +11,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# JWT settings
+jwt.secret=mySuperSecretKeyForJwtSigning1234567890sdfsafawef!
+jwt.expiration=3600000
