--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -23,6 +23,8 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+  testImplementation 'org.springframework.security:spring-security-test'
 
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
@@ -38,6 +40,10 @@ dependencies {
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.mockito:mockito-core'
   testImplementation 'org.assertj:assertj-core:3.24.2'
+
+  implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
+  implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+  implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 }
 
 spotless {
@@ -48,5 +54,9 @@ spotless {
 }
 
 tasks.named('test') {
+  useJUnitPlatform()
+}
+
+test {
   useJUnitPlatform()
 }
